extends PanelContainer
class_name InfoBoxRoad


@onready var stat_box_road_points = $MarginContainer/InfoBoxRoad/StatBoxRoadPoints
@onready var stat_box_road_dim_x = $MarginContainer/InfoBoxRoad/StatBoxRoadDimX
@onready var stat_box_road_dim_y = $MarginContainer/InfoBoxRoad/StatBoxRoadDimY
@onready var stat_box_road_dim_z = $MarginContainer/InfoBoxRoad/StatBoxRoadDimZ



# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
